# functional

./: LICENSE  echo.hs  ftpserver  ftpserver.cabal  ftpserver.hs  try.hs  untitled
Downloads/functional-master/: README.md  ftpserver.hs
